fix: deployment in release

--- a/RedEdrDll/RedEdrDll.vcxproj
+++ b/RedEdrDll/RedEdrDll.vcxproj
@@ -92,6 +92,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>SylantStrike</TargetName>
+    <OutDir>C:\RedEdr</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
