--- a/RedEdrDll/RedEdrDll.vcxproj
+++ b/RedEdrDll/RedEdrDll.vcxproj
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>SylantStrike</TargetName>
+    <TargetName>RedEdrDll</TargetName>
     <OutDir>C:\RedEdr</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
