--- a/RedEdrTester/RedEdrTester.vcxproj
+++ b/RedEdrTester/RedEdrTester.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="..\RedEdrShared\logging.cpp" />
     <ClCompile Include="..\RedEdrShared\loguru.cpp" />
     <ClCompile Include="..\RedEdrShared\piping.cpp" />
+    <ClCompile Include="..\RedEdrShared\process_query.cpp" />
     <ClCompile Include="..\RedEdrShared\utils.cpp" />
     <ClCompile Include="..\RedEdr\config.cpp" />
     <ClCompile Include="..\RedEdr\dllinjector.cpp" />
@@ -145,7 +146,6 @@
     <ClCompile Include="..\RedEdr\mem_dynamic.cpp" />
     <ClCompile Include="..\RedEdr\mem_static.cpp" />
     <ClCompile Include="..\RedEdr\process.cpp" />
-    <ClCompile Include="..\RedEdr\process_query.cpp" />
     <ClCompile Include="..\RedEdr\process_resolver.cpp" />
     <ClCompile Include="..\RedEdr\serviceutils.cpp" />
     <ClCompile Include="RedEdrTester.cpp" />
