--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClCompile Include="process.cpp">
       <Filter>Source Files\windows</Filter>
     </ClCompile>
-    <ClCompile Include="process_query.cpp">
-      <Filter>Source Files\windows</Filter>
-    </ClCompile>
     <ClCompile Include="mem_static.cpp">
       <Filter>Source Files\windows</Filter>
     </ClCompile>
@@ -129,12 +126,12 @@
     <ClCompile Include="..\RedEdrShared\etw_krabs.cpp">
       <Filter>Header Files\existing</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdrShared\process_query.cpp">
+      <Filter>Header Files\existing</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="mypeb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="serviceutils.h">
@@ -200,9 +197,6 @@
     <ClInclude Include="process.h">
       <Filter>Header Files\windows</Filter>
     </ClInclude>
-    <ClInclude Include="process_query.h">
-      <Filter>Header Files\windows</Filter>
-    </ClInclude>
     <ClInclude Include="mem_static.h">
       <Filter>Header Files\windows</Filter>
     </ClInclude>
@@ -210,7 +204,7 @@
       <Filter>Header Files\windows</Filter>
     </ClInclude>
     <ClInclude Include="dllreader.h">
-      <Filter>Header Files\existing</Filter>
+      <Filter>Header Files\input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
