--- a/RedEdrShared/RedEdrShared.vcxproj
+++ b/RedEdrShared/RedEdrShared.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="loguru.cpp" />
     <ClCompile Include="piping.cpp" />
+    <ClCompile Include="process_query.cpp" />
     <ClCompile Include="ranges.cpp" />
     <ClCompile Include="RedEdrShared.cpp" />
     <ClCompile Include="utils.cpp" />
@@ -144,7 +145,9 @@
     <ClInclude Include="json.hpp" />
     <ClInclude Include="logging.h" />
     <ClInclude Include="loguru.hpp" />
+    <ClInclude Include="mypeb.h" />
     <ClInclude Include="piping.h" />
+    <ClInclude Include="process_query.h" />
     <ClInclude Include="ranges.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
