refactor: rename Config to Settings so its doesnt collide with RedEdr\config

--- a/RedEdrDriver/RedEdrDriver.vcxproj
+++ b/RedEdrDriver/RedEdrDriver.vcxproj
@@ -116,19 +116,19 @@
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="config.c" />
     <ClCompile Include="Driver.c" />
     <ClCompile Include="hashcache.c" />
     <ClCompile Include="kapcinjector.c" />
     <ClCompile Include="kcallbacks.c" />
+    <ClCompile Include="settings.c" />
     <ClCompile Include="upipe.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="config.h" />
     <ClInclude Include="hashcache.h" />
     <ClInclude Include="kapcinjector.h" />
     <ClInclude Include="kcallbacks.h" />
+    <ClInclude Include="settings.h" />
     <ClInclude Include="upipe.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
