--- a/RedEdr/RedEdr.vcxproj
+++ b/RedEdr/RedEdr.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="mem_static.cpp" />
     <ClCompile Include="pplmanager.cpp" />
     <ClCompile Include="pplreader.cpp" />
+    <ClCompile Include="privileges.cpp" />
     <ClCompile Include="process.cpp" />
     <ClCompile Include="processinfo.cpp" />
     <ClCompile Include="process_resolver.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="mem_static.h" />
     <ClInclude Include="pplmanager.h" />
     <ClInclude Include="pplreader.h" />
+    <ClInclude Include="privileges.h" />
     <ClInclude Include="process.h" />
     <ClInclude Include="process_resolver.h" />
     <ClInclude Include="serviceutils.h" />
