--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClCompile Include="..\RedEdr\mem_static.cpp">
       <Filter>Source Files\existing</Filter>
     </ClCompile>
-    <ClCompile Include="..\RedEdr\process.cpp">
+    <ClCompile Include="..\RedEdr\myprocess.cpp">
       <Filter>Source Files\existing</Filter>
     </ClCompile>
     <ClCompile Include="..\RedEdr\process_resolver.cpp">
