--- a/RedEdr/RedEdr.vcxproj
+++ b/RedEdr/RedEdr.vcxproj
@@ -148,6 +148,8 @@
     <ClCompile Include="..\RedEdrShared\etw_krabs.cpp" />
     <ClCompile Include="..\RedEdrShared\loguru.cpp" />
     <ClCompile Include="..\RedEdrShared\piping.cpp" />
+    <ClCompile Include="..\RedEdrShared\myprocess.cpp" />
+    <ClCompile Include="..\RedEdrShared\process_resolver.cpp" />
     <ClCompile Include="..\RedEdrShared\process_query.cpp" />
     <ClCompile Include="..\RedEdrShared\utils.cpp" />
     <ClCompile Include="edr_reader.cpp" />
@@ -168,15 +170,12 @@
     <ClCompile Include="pplmanager.cpp" />
     <ClCompile Include="pplreader.cpp" />
     <ClCompile Include="privileges.cpp" />
-    <ClCompile Include="process.cpp" />
-    <ClCompile Include="processinfo.cpp" />
-    <ClCompile Include="process_resolver.cpp" />
     <ClCompile Include="RedEdr.cpp" />
     <ClCompile Include="serviceutils.cpp" />
     <ClCompile Include="webserver.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\RedEdrShared\loguru.hpp" />
+    <ClInclude Include="loguru.hpp" />
     <ClInclude Include="edr_reader.h" />
     <ClInclude Include="event_aggregator.h" />
     <ClInclude Include="event_augmenter.h" />
@@ -198,8 +197,6 @@
     <ClInclude Include="pplmanager.h" />
     <ClInclude Include="pplreader.h" />
     <ClInclude Include="privileges.h" />
-    <ClInclude Include="process.h" />
-    <ClInclude Include="process_resolver.h" />
     <ClInclude Include="serviceutils.h" />
     <ClInclude Include="webserver.h" />
   </ItemGroup>
