--- a/RedEdrTester/RedEdrTester.vcxproj
+++ b/RedEdrTester/RedEdrTester.vcxproj
@@ -144,7 +144,7 @@
     <ClCompile Include="..\RedEdr\kernelinterface.cpp" />
     <ClCompile Include="..\RedEdr\mem_dynamic.cpp" />
     <ClCompile Include="..\RedEdr\mem_static.cpp" />
-    <ClCompile Include="..\RedEdr\process.cpp" />
+    <ClCompile Include="..\RedEdr\myprocess.cpp" />
     <ClCompile Include="..\RedEdr\process_resolver.cpp" />
     <ClCompile Include="..\RedEdr\serviceutils.cpp" />
     <ClCompile Include="RedEdrTester.cpp" />
